--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 * {
   padding: 0;
   margin: 0;
-  color: #1a1f36;
   box-sizing: border-box;
   word-wrap: break-word;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Ubuntu,sans-serif;
 }
 body {
     height: 100%;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
 }
-
+.alert{
+  
+}
 h1 {
     letter-spacing: -1px;
 }
