--- a/src/components/style/navbar.css
+++ b/src/components/style/navbar.css
@@ -1,113 +1,121 @@
-@import url('https://fonts.googleapis.com/css?family=Averia+Serif+Libre|Bubblegum+Sans|Caveat+Brush|Chewy|Lobster+Two');
-
+@import url("https://fonts.googleapis.com/css?family=Averia+Serif+Libre|Bubblegum+Sans|Caveat+Brush|Chewy|Lobster+Two");
 
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar-right{
+  display: flex;
+  flex-direction: row;
+  width: 30%;
+  justify-content: space-between;
 }
 
 /* button3 */
 .btn-3 {
-    background: rgb(0,172,238);
-  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
-    width: 130px;
-    height: 40px;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-    
-  }
-  .btn-primary{
-    color: #5469d4;
-    background-color: white;
-    border-color: #5469d4 !important;
-  }
-  .btn-3 span {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  .btn-3:before,
-  .btn-3:after {
-    position: absolute;
-    content: "";
-    right: 0;
-    top: 0;
-     background: rgba(2,126,251,1);
-    transition: all 0.3s ease;
-  }
-  .btn-3:before {
-    height: 0%;
-    width: 2px;
-  }
-  .btn-3:after {
-    width: 0%;
-    height: 2px;
-  }
-  .btn-3:hover{
-     background: transparent;
-    box-shadow: none;
-  }
-  .btn-3:hover:before {
-    height: 100%;
-  }
-  .btn-3:hover:after {
-    width: 100%;
-  }
-  .btn-3 span:hover{
-     color: rgba(2,126,251,1);
-  }
-  .btn-3 span:before,
-  .btn-3 span:after {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: 0;
-     background: rgba(2,126,251,1);
-    transition: all 0.3s ease;
-  }
-  .btn-3 span:before {
-    width: 2px;
-    height: 0%;
-  }
-  .btn-3 span:after {
-    width: 0%;
-    height: 2px;
-  }
-  .btn-3 span:hover:before {
-    height: 100%;
-  }
-  .btn-3 span:hover:after {
-    width: 100%;
-  }
+  background: rgb(0, 172, 238);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 172, 238, 1) 0%,
+    rgba(2, 126, 251, 1) 100%
+  );
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  padding: 0;
+  border: none;
+}
+.btn-primary {
+  color: #5469d4;
+  background-color: white;
+  border-color: #5469d4 !important;
+}
+.btn-3 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn-3:before,
+.btn-3:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  background: rgba(2, 126, 251, 1);
+  transition: all 0.3s ease;
+}
+.btn-3:before {
+  height: 0%;
+  width: 2px;
+}
+.btn-3:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-3:hover {
+  background: transparent;
+  box-shadow: none;
+}
+.btn-3:hover:before {
+  height: 100%;
+}
+.btn-3:hover:after {
+  width: 100%;
+}
+ƒ .btn-3 span:hover {
+  color: rgba(2, 126, 251, 1);
+}
+.btn-3 span:before,
+.btn-3 span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  background: rgba(2, 126, 251, 1);
+  transition: all 0.3s ease;
+}
+.btn-3 span:before {
+  width: 2px;
+  height: 0%;
+}
+.btn-3 span:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-3 span:hover:before {
+  height: 100%;
+}
+.btn-3 span:hover:after {
+  width: 100%;
+}
 /* ----------- */
 
 .collapse {
-    display: flex !important;
-    flex-direction: row !important;
+  display: flex !important;
+  flex-direction: row !important;
 }
 
 .navbar {
-    border: 0;
-    z-index: 9999;
-    letter-spacing: 4px;
-
+  border: 0;
+  z-index: 9999;
+  letter-spacing: 4px;
 }
 .logo {
-    display: block;
-    height: auto;
-    width: 52px;
-    padding-top: 5px;
-    margin-right: 15px;
+  display: block;
+  height: auto;
+  width: 52px;
+  padding-top: 5px;
+  margin-right: 15px;
 }
 
-.navbar-brand>img {
+.navbar-brand > img {
   height: 100%;
   padding: 15px; /* firefox bug fix */
   width: auto;
@@ -117,22 +125,24 @@ html {
 }
 
 .navbar-header h1 {
-    letter-spacing: 1px;
-    color: #5469d4 !important;
-    font-family: 'Lobster Two', cursive;
+  letter-spacing: 1px;
+  color: #5469d4 !important;
+  font-family: "Lobster Two", cursive;
 }
 
-.navbar li a, .navbar {
-    color: black !important;
-    font-size: 12px;
-    transition: all 0.6s 0s;
+.navbar li a,
+.navbar {
+  color: black !important;
+  font-size: 12px;
+  transition: all 0.6s 0s;
 }
 
 .navbar-toggle {
-    background-color: transparent !important;
-    border: 0;
+  background-color: transparent !important;
+  border: 0;
 }
 
-.navbar-nav li a:hover, .navbar-nav li.active a {
-    color: red !important;
+.navbar-nav li a:hover,
+.navbar-nav li.active a {
+  color: red !important;
 }
